--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 /* Row-Column Example */
 .row-column {
-  grid-template-columns: 40px 50px 1fr 50px 40px;
-  grid-template-rows: .25fr 100px .75fr;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .row-column .item:nth-child(2n) {
@@ -38,27 +38,42 @@ body {
   align-items: center;
   font-size: 2em;
 }
-
+.areas {
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: min-content 1fr min-content;
+  grid-template-areas: "header header" "sidebar main" "footer footer";
+}
 .header {
   background-color: cadetblue;
+  grid-area: header;
+  padding: 1em 0;
 }
 
 .sidebar {
   background-color: darksalmon;
+  grid-area: sidebar;
 }
 
 .main {
   background-color: wheat;
+  grid-area: main;
 }
 
 .footer {
   background-color: mistyrose;
+  grid-area: footer;
+  padding: 1em 0;
 }
 
 .hidden {
   display: none;
 }
-
+@media (max-width: 60em) {
+  .areas {
+    grid-template-areas: "header header" "sidebar sidebar" "main main"
+      "footer footer";
+  }
+}
 /* Form Example */
 
 .user-buttons > button {
@@ -74,4 +89,38 @@ input[type="text"] {
   padding: 0.5em;
   border-radius: 5px;
   border: 0.5px solid grey;
+}
+.form {
+  width: 800px;
+  border: 2px solid black;
+  height: 450px;
+  grid-template-columns: min-content min-content 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-areas: "firstNameLabel firstNameInput department"
+    "lastNameLabel lastNameInput department"
+    "addressLabel addressInput department" ". buttons buttons";
+}
+label[for="firstName"] {
+  grid-area: firstNameLabel;
+}
+#firstName {
+  grid-area: firstNameInput;
+}
+label[for="lastName"] {
+  grid-area: lastNameLabel;
+}
+#lastName {
+  grid-area: lastNameInput;
+}
+label[for="address"] {
+  grid-area: addressLabel;
+}
+#address {
+  grid-area: addressInput;
+}
+.department {
+  grid-area: department;
+}
+.user-buttons {
+  grid-area: buttons;
 }
