--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .container {
   display: grid;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 /* Row-Column Example */
@@ -91,36 +91,53 @@ input[type="text"] {
   border: 0.5px solid grey;
 }
 .form {
-  width: 800px;
+  margin: 1em auto;
+  padding: 5em;
+  width: 500px;
   border: 2px solid black;
-  height: 450px;
-  grid-template-columns: min-content min-content 1fr;
-  grid-template-rows: repeat(4, 1fr);
+  /* height: 450px; */
+  grid-template-columns: 5em 10em 1fr;
+  grid-template-rows: 3em 3em 3em 3em;
   grid-template-areas: "firstNameLabel firstNameInput department"
     "lastNameLabel lastNameInput department"
     "addressLabel addressInput department" ". buttons buttons";
+  grid-row-gap: 0.5em;
+  -ms-grid-row-align: center;
 }
 label[for="firstName"] {
   grid-area: firstNameLabel;
+  align-self: center;
 }
 #firstName {
   grid-area: firstNameInput;
+  align-self: center;
 }
 label[for="lastName"] {
   grid-area: lastNameLabel;
+  align-self: center;
 }
 #lastName {
   grid-area: lastNameInput;
+  align-self: center;
 }
 label[for="address"] {
   grid-area: addressLabel;
+  align-self: center;
 }
 #address {
   grid-area: addressInput;
+  align-self: center;
 }
 .department {
+  padding-left: 0.5em;
   grid-area: department;
 }
+.department h2 {
+  margin-bottom: 0;
+}
 .user-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   grid-area: buttons;
 }
